Fix submit highscore button text not fitting the button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,13 @@ body {
     width: 110px;
 }
 
+.overlay-control {
+    width: auto;
+    min-width: 110px;
+    height: 40px;
+    margin: auto;
+}
+
 .game-control:hover, .overlay-control:hover {
     cursor: pointer;
     color: var(--link-text-hover);
@@ -218,11 +225,7 @@ body {
 
 #play-button {
     font-size: x-large;
-}
-
-.play-again-button {
-    margin: auto;
-    height: 45px;
+    height: 60px;
 }
 
 /* ------------- Overlay ------------- */
@@ -478,7 +481,7 @@ h3.title {
     }
     #shape-container {
         margin-bottom: 30px;
-    }    
+    }
     #top-info {
         justify-content: space-between;
         margin: 5px 0px 15px 0px;
